improving profile page

--- a/qanda/qanda_app/static/qanda/css/qanda.css
+++ b/qanda/qanda_app/static/qanda/css/qanda.css
@@ -144,6 +144,79 @@
 }
 
 .answer:hover .reply-box {
-		display: block;
+	display: block;
+}
+
+.profile-summary {
+	font-size: 22;
+	font-weight: 700;
+}
+
+.profile-summary-element {
+	font-size: 18;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.profile-important-link:hover {
+	font-size: 22;
+	color: red;
+}
+
+.profile-rest {
+	padding-top: 20px;
+	font-size: 22;
+	font-weight: 700;
+}
+
+.profile-rest-table {
+	font-size: 16;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.profile-rest-table td {
+	width: 200px;
+	height: 60px;
+	border: inset;
+	border-color: rgba(240, 240, 240, 0.8);
+	vertical-align: center;
+	text-align: center;
+}
+
+.profile-rest-table th {
+	width: 200px;
+	height: 60px;
+	border: inset;
+	border-color: rgba(240, 240, 240, 0.8);
+	background-color: rgba(220, 220, 220, 0.8);
+	vertical-align: center;
+	text-align: center;
+}
+
+.profile-rest-table td:first-child {
+	background-color: rgba(230, 230, 230, 0.8);
+}
+
+.profile-rest-table td:first-child + td {
+	font-size: 22;
+	font-weight: 700;
+}
+
+.profile-rest-table td:first-child + td + td {
+	font-size: 22;
+	font-weight: 700;
+}
+
+.relations-title {
+	color: black;
+}
+
+.relations-table {
+	display: none;
+}
+
+.relations-message {
+	font-size: 9;
 }
 
