--- a/qanda/qanda_app/static/qanda/css/qanda.css
+++ b/qanda/qanda_app/static/qanda/css/qanda.css
@@ -152,10 +152,18 @@
 	font-weight: 700;
 }
 
+.profile-summary-begin {
+	font-size: 18;
+	font-weight: 700;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+
 .profile-summary-element {
 	font-size: 18;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	margin-left: 20px;
 }
 
 .profile-important-link:hover {
