--- a/qanda/qanda_app/templates/question_listing_base.html
+++ b/qanda/qanda_app/templates/question_listing_base.html
@@ -28,7 +28,7 @@
 							</span>
 						{% endif %}
 						<span class="questioninfo pull-right">
-							{{ question.postDate }} by {{ question.author }} 
+							<a class="questioninfo pull-right" href="{{ question.author.get_absolute_url }}">{{ question.postDate }} by {{ question.author }} </a>
 						</span>
 					</div>	
 				</a>
