--- a/qanda/qanda_app/templates/question_list.html
+++ b/qanda/qanda_app/templates/question_list.html
@@ -106,13 +106,25 @@
 	  <ul>
 		{% if prev or prev == 0 %}
 			{% if view == 'user_asked_questions_list' %}
-	    		<li class=""><a href="{% url qanda_app.views.user_asked_questions_list user_id=qandaUser.pk question_id=prev %}">Prev</a></li>
+				{% if category %}
+		    		<li class=""><a href="{% url categorized_user_asked_questions_list user_id=qandaUser.pk category=category question_id=prev %}">Prev</a></li>
+				{% else %}
+		    		<li class=""><a href="{% url user_asked_questions_list user_id=qandaUser.pk question_id=prev %}">Prev</a></li>
+		    	{% endif %}
     		{% elif view == 'user_answered_questions_list' %}
-	    		<li class=""><a href="{% url qanda_app.views.user_answered_questions_list user_id=qandaUser.pk question_id=prev %}">Prev</a></li>
+    			{% if category %}
+	    			<li class=""><a href="{% url categorized_user_answered_questions_list user_id=qandaUser.pk category=category question_id=prev %}">Prev</a></li>
+	    		{% else %}
+	    			<li class=""><a href="{% url user_answered_questions_list user_id=qandaUser.pk question_id=prev %}">Prev</a></li>
+    			{% endif %}
     		{% elif view == 'user_replied_questions_list' %}
-	    		<li class=""><a href="{% url qanda_app.views.user_replied_questions_list user_id=qandaUser.pk question_id=prev %}">Prev</a></li>
+    			{% if category %}
+	    			<li class=""><a href="{% url categorized_user_replied_questions_list user_id=qandaUser.pk category=category question_id=prev %}">Prev</a></li>
+	    		{% else %}
+	    			<li class=""><a href="{% url user_replied_questions_list user_id=qandaUser.pk question_id=prev %}">Prev</a></li>
+	    		{% endif %}
     		{% elif view == 'question_list' %}
-	    		<li class=""><a href="{% url qanda_app.views.question_list question_id=prev %}">Prev</a></li>
+	    			<li class=""><a href="{% url qanda_app.views.question_list question_id=prev %}">Prev</a></li>
 	    	{% endif %}
     	{% else %}
 	    	<li class="disabled"><a href="#">Prev</a></li>
@@ -121,7 +133,27 @@
 			<li class="disabled"><a href="#">_______________________</a></li>
 
 		{% if next %}
-	    	<li class=""><a href="{% url qanda_app.views.user_asked_questions_list user_id=qandaUser.pk question_id=next %}">Next</a></li>
+			{% if view == 'user_asked_questions_list' %}
+				{% if category %}
+		    		<li class=""><a href="{% url categorized_user_asked_questions_list user_id=qandaUser.pk category=category question_id=next %}">Next</a></li>
+				{% else %}
+		    		<li class=""><a href="{% url user_asked_questions_list user_id=qandaUser.pk question_id=next %}">Next</a></li>
+		    	{% endif %}
+    		{% elif view == 'user_answered_questions_list' %}
+    			{% if category %}
+	    			<li class=""><a href="{% url categorized_user_answered_questions_list user_id=qandaUser.pk category=category question_id=next %}">Next</a></li>
+	    		{% else %}
+	    			<li class=""><a href="{% url user_answered_questions_list user_id=qandaUser.pk question_id=next %}">Next</a></li>
+    			{% endif %}
+    		{% elif view == 'user_replied_questions_list' %}
+    			{% if category %}
+	    			<li class=""><a href="{% url categorized_user_replied_questions_list user_id=qandaUser.pk category=category question_id=next %}">Next</a></li>
+	    		{% else %}
+	    			<li class=""><a href="{% url user_replied_questions_list user_id=qandaUser.pk question_id=next %}">Next</a></li>
+	    		{% endif %}
+    		{% elif view == 'question_list' %}
+	    			<li class=""><a href="{% url qanda_app.views.question_list question_id=next %}">Next</a></li>
+	    	{% endif %}
 	    {% else %}
 	    	<li class="disabled"><a href="#">Next</a></li>
 		{% endif %}
