--- a/qanda/qanda_app/templates/question_list.html
+++ b/qanda/qanda_app/templates/question_list.html
@@ -12,6 +12,10 @@
 		{% elif view == 'question_list' %}
 			Recent Questions 
     	{% endif %}
+		{% if category %}
+    		-
+			{{ category }}
+		{% endif %}
 	</title>
 {% endblock %}
 
@@ -31,6 +35,10 @@
 				{% elif view == 'question_list' %}
 					Recent Questions 
 		    	{% endif %}
+				{% if category %}
+		    		-
+					{{ category }}
+				{% endif %}
 
 				<div class="pull-right">
 					<div class="btn-group btn-large">
