--- a/qanda/qanda_app/templates/profile.html
+++ b/qanda/qanda_app/templates/profile.html
@@ -144,7 +144,7 @@
 								{{ qandaUser.get_question_downvotes_given }}
 							</td>
 						</tr>
-						<tr>
+						<tr class="question-useful-row">
 							<td>
 								Found Useful
 							</td>
@@ -155,7 +155,7 @@
 								{{ qandaUser.get_question_usefuls_given }}
 							</td>
 						</tr>
-						<tr>
+						<tr class="question-notUseful-row">
 							<td>
 								Didn't Found Useful
 							</td>
@@ -234,7 +234,7 @@
 								{{ qandaUser.get_answer_downvotes_given }}
 							</td>
 						</tr>
-						<tr>
+						<tr class="answer-useful-row">
 							<td>
 								Found Useful
 							</td>
@@ -245,7 +245,7 @@
 								{{ qandaUser.get_answer_usefuls_given }}
 							</td>
 						</tr>
-						<tr>
+						<tr class="answer-notUseful-row">
 							<td>
 								Didn't Found Useful
 							</td>
