--- a/qanda/qanda_app/static/qanda/css/qanda.css
+++ b/qanda/qanda_app/static/qanda/css/qanda.css
@@ -1,5 +1,6 @@
 
 .votecount-box {
+	font-size: 12;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-left: 10px;
@@ -15,6 +16,7 @@
 }
 
 .answercount-box {
+	font-size: 12;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-left: 10px;
@@ -30,6 +32,7 @@
 }
 
 .viewcount-box {
+	font-size: 12;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-left: 10px;
